# Harness-Scaffolding

./: .gitignore  README.md
.github/workflows/: ci.yml
harness-project/: .gitignore  CONTEXT.md  NOTICE  ROADMAP.md  further_steps.md  groups.md  groups.py  harness-reference.md  pyproject.toml
harness-project/council/: __init__.py  backends.py  banner.py  chat.py  cli.py  composer.py  config.py  contract.py  debate.py  flight.py  ledger.py  policy.py  preamble.py  pricing.py  report.py  shadow.py
harness-project/council/wrap/: bridge.py  display_hook.py  events.py  harness_status.py  render.py  session.py  state.py  state_hook.py  tui_contract.py
harness-project/docs/: artifact-skills-2026-07-12.md  debate-harnesses-2026-07-12.md  debate-techniques-2026-07-12.md  output-contract.md  phase-1.5-spec.md  probes-2026-07-11.md
harness-project/reference/omnigent/: MAPPING.md  README.md
harness-project/tests/: conftest.py  test_backends.py  test_composer.py  test_config.py  test_contract.py  test_debate.py  test_depth.py  test_ending.py  test_events.py  test_failures.py  test_ledger.py  test_notes_arming.py  test_parallel.py  test_policy.py  test_preamble.py  test_retry.py  test_sessions.py  test_shadow.py  test_stream.py  test_surrogates.py  test_tape.py
harness-project/tests/stubs/: claude  claude-artifact  claude-bad-flag  claude-contract  claude-contract-degrade  claude-contract-malformed  claude-contract-seq  claude-escalate  claude-flaky-once  claude-flaky-quota  claude-plain  claude-slow  claude-stream-flaky  codex  codex-contract  codex-contract-seq  codex-slow
